syntax = "proto3";

package services.authentication;

import "services.proto";

service AuthenticationService {
  rpc isAuth (AuthKey) returns (AuthBool) {}

  rpc auth (UserData) returns (Result) {}

  rpc register (RegisterData) returns (Result) {}

  rpc rollback (Id) returns (Empty) {}

  rpc commit (Id) returns (Result) {}

  rpc whoIsThis (AuthKey) returns (User) {}

  rpc getStatus (Empty) returns (Status) {}
}

message AuthKey {
  string key = 1;
}

message User {
  string username = 1;
}

message AuthBool {
  bool auth = 1;
}

message RegisterData {
  string encode = 1;
  int32 id = 2;
}

message UserData {
  string encode = 1;
}

message Result {
  optional string key = 2;
  optional string error = 3;
}